# fs-mcp-python

./: .gitignore  .mcp.json  README.md  config.json  pyproject.toml  run_server.py  test_refresh.py  test_server.py
fs_mcp_server/: config.py  main.py
storage/: config.json  test.txt
storage/docs/: readme.md
